################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( rec1 )

add_executable(recursion1 recursion1.cpp)
