################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( rec2 )

add_executable(recursion2 recursion2.cpp)
