################################################################################
# Initialization
################################################################################

# minimum CMake version necessary to build projects
cmake_minimum_required( VERSION 2.8 )

project( rec3 )

add_executable(recursion3 recursion3.cpp)
